--- a/views/invoices.erb
+++ b/views/invoices.erb
@@ -1,23 +1,5 @@
 <%= include('entity-management') %>
 
-<div id="new_customer_modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="newCustomerModalLabel">
-  <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <ul class="block-options">
-          <li>
-            <button data-dismiss="modal" type="button"><i class="si si-close"></i></button>
-          </li>
-        </ul>
-        <h3 class="modal-title">Nuevo cliente</h3>
-      </div>
-      <div class="modal-body">
-      </div>
-    </div>
-  </div>
-</div>
-
-
 <div id="invoice_line_modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="invoiceLineModalLabel">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
@@ -51,6 +33,8 @@
     </div>
   </div>
 </div>
+
+<%= partial :select_customer %>
 
 <!-- Renders the element description -->
 <script type="text/tmpl" id="elements_title">
@@ -86,7 +70,8 @@
          <th class="table-header-title" scope="col" style="width:10%"><%= t.invoices.table.date %></th>
          <th class="table-header-title" scope="col" style="width:10%"><%= t.invoices.table.number %></th>
          <th class="table-header-title" scope="col" style="width:15%"><%= t.invoices.table.customer %></th>
-         <th class="table-header-title" scope="col" style="width:20%"><%= t.invoices.table.concept %></th>
+         <th class="table-header-title" scope="col" style="width:10%"><%= t.invoices.table.reference %></th>
+         <th class="table-header-title" scope="col" style="width:10%"><%= t.invoices.table.concept %></th>
          <th class="table-header-title" scope="col" style="width:9%"><%= t.invoices.table.total %></th>
          <th class="table-header-title" scope="col" style="width:10%"><%= t.invoices.table.invoice_type %></th>
          <th class="table-header-title" scope="col" style="width:10%"><%= t.invoices.table.invoice_status %></th>        
@@ -114,8 +99,11 @@
         <%%= entity.customer.name %> <%%= entity.customer.surname %>
       </td>
       <td class="table-cell element-navigation-detail" rel="<%%=index%>">
-        <%%= entity.concept %>
+        <%%= entity.reference %>
       </td>
+      <td class="table-cell element-navigation-detail" rel="<%%=index%>">
+        <%%= entity.concept %>
+      </td>      
       <td class="table-cell element-navigation-detail" rel="<%%=index%>">
         <%%= new Number(entity.total).toFixed(2) %>
       </td>
@@ -185,7 +173,7 @@
               <%% } %>   
 
               <div class="block-content">
-                  <form name="element" class="form-horizontal" method="POST" autocomplete="off">
+                  <form id="invoice_form" name="element" class="form-horizontal" method="POST" autocomplete="off">
 
                       <%% if (entity) { %>
                       <input type="hidden" name="id" value="<%%=entity.id%>"/>
@@ -237,21 +225,9 @@
                           <div class="form-group">
                              <label class="col-md-12"><%= t.invoices.form.concept.label %></label>
                              <div class="col-md-11">
-                               <select name="concept" class="form-control"
-                                 <%% if (entity && entity.invoice_status == 'invoice') { %>disabled<%%}%>>
-                                 <option value=""><%= t.invoices.form.select_concept %></option>
-                                 <% @concept.classifier_terms.each do |term| %>
-                                   <option value="<%=term.name%>" <%% if (entity && entity.concept == '<%=term.name%>') { %>selected<%%}%>><%=term.name%></option>
-                                 <% end %>
-                               </select>  
-                               <textarea rows="1" cols="50" name="concept" class="form-control" <%% if (entity && entity.invoice_status == 'invoice') { %>disabled<%%}%>><%% if (entity) {%><%%=entity.concept%><%%}%></textarea>
+                               <textarea rows="3" cols="50" name="concept" class="form-control" <%% if (entity && entity.invoice_status == 'invoice') { %>disabled<%%}%>><%% if (entity) {%><%%=entity.concept%><%%}%></textarea>
                              </div>
-                          </div>    
-                          <div class="form-group">
-                            <label class="css-input switch switch-sm switch-primary" style="margin-left: 15px">
-                                <input type="checkbox" id="manual_concept" checked="" <%% if (entity && entity.invoice_status == 'invoice') { %>disabled<%%}%>><span></span> <%= t.invoices.form.manual_concept.label %>
-                            </label>
-                          </div>                                                   
+                          </div>                                                    
                         </div>
                       </div>
                           
@@ -261,32 +237,32 @@
   	                      <div class="form-group">
                              <input type="hidden" id="customer_type" name="customer_type" <%% if (entity) { %>value="<%%=entity.customer_type%>"<%%}%>/>
   	                         <label class="col-md-12"><%= t.invoices.form.customer.label %></label>
-  	                         <div <%% if (!entity || (entity && entity.invoice_status == 'draft')) { %>class="col-md-9"<%%}else{%>class="col-md-12"<%%}%>>
+  	                         <div <%% if (!entity || (entity && entity.invoice_status == 'draft')) { %>class="col-md-6"<%%}else{%>class="col-md-12"<%%}%>>
   	                           <input type="hidden" id="customer_id" name="customer_id" <%% if (entity) { %>value="<%%=entity.customer_id%>"<%%}%>/>
-  	                           <input type="text" id="customer" name="customer" class="form-control" autocomplete="off" <%% if (entity) {%> value="<%%=entity.customer.full_name%>" <%%}%> <%% if (entity && entity.invoice_status == 'invoice') { %>disabled<%%}%>/>
+  	                           <input type="text" id="customer" name="customer" class="form-control" autocomplete="off" <%% if (entity) {%> value="<%%=entity.customer.full_name%>" <%%}%> readonly <%% if (entity && entity.invoice_status == 'invoice') { %>disabled<%%}%>/>
   	                         </div>
                              <%% if (!entity || (entity && entity.invoice_status == 'draft')) { %>
-  	                         <div class="col-md-3">
-  	                           <a id="new_customer_button" href="#" class="pull-right" style="position: relative; top: 5px"><%= t.invoices.form.new_customer %></a>
+  	                         <div class="col-md-6">
+  	                           <a id="select_customer_button" href="#" class="btn btn-default" role="button"><span class="fa fa-user-circle-o">&nbsp;</span><%= t.invoices.form.select_customer %></a>
   	                         </div>
                              <%% } %>
   	                      </div>
                         </div>  
-                          <div id="customer_full_name_container" class="col-md-3" <%% if (entity && entity.customer_type == 'individual'){%>style="display:none"<%% }%>>
+                          <div id="customer_full_name_container" class="col-md-3" <%% if (!entity || (entity && entity.customer_type != 'legal_entity')){%>style="display:none"<%% }%>>
                             <div class="form-group">
                                <label class="col-md-12"><%= t.invoices.form.customer_company.label %></label>
                                <div class="col-md-12">
                                  <input type="text" id="customer_full_name" name="customer_full_name" class="form-control" autocomplete="off" 
-                                    <%% if (entity) {%> value="<%%=entity.customer_full_name%>" <%%}%> <%% if (entity && entity.invoice_status == 'invoice') { %>disabled<%%}%>/>
+                                    <%% if (entity) {%> value="<%%=entity.customer_full_name%>" <%%}%> readonly <%% if (entity && entity.invoice_status == 'invoice') { %>disabled<%%}%>/>
                                </div>
                             </div>            
                           </div>                          
-                          <div id="customer_document_id_container" <%% if (entity && entity.customer_type == 'individual'){%>class="col-md-6"<%% } else {%>class="col-md-3"<%%}%>>
+                          <div id="customer_document_id_container" <%% if (!entity || (entity && entity.customer_type != 'legal_entity')){%>class="col-md-6"<%% } else {%>class="col-md-3"<%%}%>>
     	                      <div class="form-group">
     	                         <label class="col-md-12"><%= t.invoices.form.customer_document_id.label %></label>
     	                         <div class="col-md-12">
     	                           <input type="text" id="customer_document_id" name="customer_document_id" class="form-control" autocomplete="off" 
-    	                              <%% if (entity) {%> value="<%%=entity.customer_document_id%>" <%%}%> <%% if (entity && entity.invoice_status == 'invoice') { %>disabled<%%}%>/>
+    	                              <%% if (entity) {%> value="<%%=entity.customer_document_id%>" <%%}%> readonly <%% if (entity && entity.invoice_status == 'invoice') { %>disabled<%%}%>/>
     	                         </div>
     	                      </div>	          
                           </div>
@@ -318,7 +294,13 @@
   	                      </div>              
                         </div>
                       </div>            
-    	                                
+
+    	                <div class="form-group">
+                          <div class="col-md-12">      
+                            <div id="error_summary" class="alert alert-danger" style="display: none"></div>
+                          </div>
+                      </div>      
+
                       <div class="form-group">
 	                        <div class="col-md-12">
   	                        <%% if (entity) { %>
@@ -768,3 +750,5 @@
       </div>  
   </form>
 </script>
+
+<%= partial :select_customer_script %> 
